@@ -8,7 +8,7 @@ typedef struct jobject_id
   id objc_object;
 } jobject_id;
 
-void java_directory_init (JNIEnv *jniEnv);
+void java_directory_init (JNIEnv *jniEnv, jobject swarmEnvironment);
 void java_directory_drop (JNIEnv *jniEnv);
 
 jobject_id *java_directory_java_find (JNIEnv *env, jobject java_object);
